lanecwe-Prod/src/objects/Omniture_Campaign_Code__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Lead_Owner_ID__c</fullName>
        <inlineHelpText>Input the ID of the user or queue that you want this record assigned to by going to the record for that under setup in SFDC</inlineHelpText>
        <label>Assigned Lead Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Omniture_Campaign_Code__c</fullName>
        <label>Omniture Campaign Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Set_Lead_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set this if you want a newly created lead with this Omniture Campaign Code to be assigned to a user or a queue</inlineHelpText>
        <label>Set Lead Owner</label>
        <type>Checkbox</type>
    </fields>
    <label>Omniture Campaign Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Omniture_Campaign_Code__c</columns>
        <columns>Campaign__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Set_Lead_Owner__c</columns>
        <columns>Assigned_Lead_Owner_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Codes_Created_Last_30_Days</fullName>
        <columns>Omniture_Campaign_Code__c</columns>
        <columns>Campaign__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Set_Lead_Owner__c</columns>
        <columns>Assigned_Lead_Owner_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Codes Created Last 30 Days</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Omniture Campaign Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assigned_Lead_Owner_ID_required_when_Tru</fullName>
        <active>true</active>
        <description>Requires that the Assigned Lead Owner ID</description>
        <errorConditionFormula>AND(
Set_Lead_Owner__c = True,
OR(
ISBLANK(Assigned_Lead_Owner_ID__c),
LEN(Assigned_Lead_Owner_ID__c) &lt;&gt; 15
),
LEFT(Assigned_Lead_Owner_ID__c ,3) &lt;&gt; &quot;00G&quot;,
LEFT(Assigned_Lead_Owner_ID__c ,3) &lt;&gt; &quot;005&quot;
)</errorConditionFormula>
        <errorDisplayField>Assigned_Lead_Owner_ID__c</errorDisplayField>
        <errorMessage>Please select a proper Assigned Lead Owner ID.  You can find this by going to the Users record and take the last 15 digits of that pages URL.</errorMessage>
    </validationRules>
</CustomObject>